Stopping body scroll behind modal.

--- a/app/assets/stylesheets/pages/_requirements.scss
+++ b/app/assets/stylesheets/pages/_requirements.scss
@@ -258,6 +258,10 @@
   backdrop-filter: blur(15px);
 }
 
+.hide-body-overflow{
+  overflow: hidden;
+}
+
 @media (max-width: 767px) {
 
   .requirement{
